# alidaparse

./: .gitignore  README.md  input.py  main.py  pyproject.toml  requirements.txt  setup.py
alidaparse/input/: InDataset.py  InModel.py  InParam.py  __init__.py  input.py
alidaparse/message_broker/: __init__.py  message_broker.py  utils.py
alidaparse/output/: OutDataset.py  OutModel.py  __init__.py  output.py
test/: test_inparam.py
